src/objects/QPMS__Decision_Tree_History__c.object
<CustomObject>
    <fields>
        <fullName>QPMS__Answer__c</fullName>
        <description>This field is used to store the answer</description>
        <label>Answer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Executed__c</fullName>
        <description>This field is used to store the values of datetime, first and last name of the logged in user. This field is shown at the bottom of Regulatory Assessment page</description>
        <label>Executed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__ExternalID__c</fullName>
        <description>Internal Purpose</description>
        <externalId>true</externalId>
        <label>ExternalID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__OutCome__c</fullName>
        <description>This field is used to store the outcomes of the questions. this field is shown in the Regulatory assessment  questions snapshot modal</description>
        <label>OutCome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reportable</fullName>
                </value>
                <value>
                    <fullName>Not Reportable</fullName>
                </value>
                <value>
                    <fullName>Reportable within 5 Days</fullName>
                </value>
                <value>
                    <fullName>Reportable within 10 Days</fullName>
                </value>
                <value>
                    <fullName>Reportable within 20 Days</fullName>
                </value>
                <value>
                    <fullName>Reportable within 30 Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Parent_Question__c</fullName>
        <description>This is a formula field used to store the question from decision tree template questionnaire</description>
        <formula>&apos;Decision_Tree_Template_Questionnaire__r.Question__c&apos;</formula>
        <label>Parent Question</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Question_Number__c</fullName>
        <description>This field is used to store the question numbers for each question</description>
        <label>Question Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Question__c</fullName>
        <description>this field is used to store all the questions came from decision tree template questionnaire object</description>
        <label>Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Regulatory_Assessment__c</fullName>
        <description>This field is Master detail to decision tree histories and used for internal purpose</description>
        <label>Regulatory Assessment</label>
        <referenceTo>QPMS__Regulatory_Assesment__c</referenceTo>
        <relationshipLabel>Decision Tree Histories</relationshipLabel>
        <relationshipName>Decision_Tree_Histories_del</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QPMS__Sign_Off_Details__c</fullName>
        <description>Used To Capture Sin Off Details</description>
        <label>Sign Off Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Supplemental_Message__c</fullName>
        <label>Supplemental Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Type__c</fullName>
        <description>this field is used to store the type of the question and used for internal purpose</description>
        <formula>if(NOT(ISBLANK(TEXT(QPMS__OutCome__c))),&apos;leaf&apos;,if( QPMS__height__c ==0,&apos;root&apos;,&apos;node&apos;))</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__height__c</fullName>
        <description>This field is used to store the Order number of questions</description>
        <label>height</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Decision Tree History</label>
    <nameField>
        <label>Decision Tree Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Decision Tree Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>